# deadlock-news-crew

./: .gitignore  README.md  pyproject.toml
src/deadlock_news_crew/: crew.py  demo_data.py  main.py  populate_demo_content.py  strapi_client.py
