[project]
name = "deadlock_news_crew"
version = "0.1.0"
description = "deadlock_news_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.80.0,<1.0.0"
]

[project.scripts]
deadlock_news_crew = "deadlock_news_crew.main:run"
run_crew = "deadlock_news_crew.main:run"
train = "deadlock_news_crew.main:train"
replay = "deadlock_news_crew.main:replay"
test = "deadlock_news_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
